# basequery

./: CMakeLists.txt
.github/workflows/: build.yml  build_x86.yml
cmake/: options.cmake
osquery/core/: init.cpp  query.cpp  system.cpp
osquery/devtools/: shell.cpp
osquery/dispatcher/: scheduler.cpp  scheduler.h
osquery/extensions/: CMakeLists.txt  impl_thrift.cpp  interface.cpp  interface.h
osquery/filesystem/: CMakeLists.txt
osquery/main/: CMakeLists.txt
osquery/remote/enroll/: enroll.cpp
osquery/sql/: sqlite_util.cpp
osquery/tables/system/: CMakeLists.txt
osquery/tables/utility/: CMakeLists.txt
osquery/utils/: CMakeLists.txt
osquery/utils/aws/: CMakeLists.txt
osquery/worker/: CMakeLists.txt
plugins/logger/tests/: CMakeLists.txt
tests/integration/tables/: CMakeLists.txt
tools/tests/: test_base.py
